--- a/cars/templates/cars.html
+++ b/cars/templates/cars.html
@@ -7,7 +7,9 @@
             <h3>Seja bem vindo!</h3>
             <h4>Meus carros</h4>
             <ul>
-                <li>{{ cars.model }}</li>
+                <li>Modelo -> {{ cars.model }}</li>
+                <li>Ano -> {{ cars.year }}</li>
+                <li>Pintura -> {{ cars.color }}</li>
             </ul>
         </body>
     {% endblock %}
