--- a/cars/templates/car_detail.html
+++ b/cars/templates/car_detail.html
@@ -87,4 +87,9 @@
       <p><strong>Placa:</strong> {{ object.plate }}</p>
       <p><strong>Preço:</strong> R$ {{ object.value }}</p>
   </div>
+  <div class="buttons-container">
+      <a href="{% url 'car_update' pk=object.pk %}" class="btn btn-primary">Editar</a>
+      <a href="{% url 'car_delete' pk=object.pk %}" class="btn btn-danger">Deletar</a>
+      <a href="{% url 'cars_list' %}" class="btn">Voltar</a>
+  </div>
 {% endblock %}
