--- a/cars/templates/car_detail.html
+++ b/cars/templates/car_detail.html
@@ -91,7 +91,9 @@
       <div class="buttons-container">
           <a href="{% url 'car_update' pk=object.pk %}" class="btn btn-primary">Editar</a>
           <a href="{% url 'car_delete' pk=object.pk %}" class="btn btn-danger">Deletar</a>
-          <a href="{% url 'cars_list' %}" class="btn">Voltar</a>
       </div>
   {% endif %}
+    <div class="buttons-container">
+        <a href="{% url 'cars_list' %}" class="btn">Voltar</a>
+    </div>
 {% endblock %}
