--- a/cars/templates/car_update.html
+++ b/cars/templates/car_update.html
@@ -110,7 +110,7 @@
     {% csrf_token %}
     <h1>Editar Carro</h1>
 
-      {{ form.as_table }}
+      {{ form.as_ul }}
     <table></table>
     <div>
       <div class="buttons-container">
