--- a/cars/templates/cars.html
+++ b/cars/templates/cars.html
@@ -115,7 +115,13 @@
       {% for car in cars %}
         <a href="{% url 'car_detail' car.pk %}">
           <div class="car-card">
-            <img src="{{ car.photo.url }}" alt="{{ car.model }} - {{ car.brand }}">
+            {% if car.photo %}
+              <img src="{{ car.photo.url }}" alt="{{ car.model }} - {{ car.brand }}">
+            {% else %}
+              <p class="no-photo">
+                  <img src="https://www.pplider.com.br/image/no_image.jpg" alt="Foto não disponível">
+              </p>
+            {% endif %}
             <h2>{{ car.brand }} {{ car.model }}</h2>
             <p>{{ car.factory_year }} - R$ {{ car.value }}</p>
           </div>
