--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,15 +72,16 @@
     <nav>
       <ul>
         {% if user.is_authenticated %}
-          <li>Olá, {{ user.username }}</li>
-          <li><a href="{% url 'new_car' %}">Cadastrar Carros</a></li>
+          <li>Olá, {{ user.first_name }}</li>
+          <li><a href="{% url 'painel' %}">Meu Painel</a></li>
         {% endif %}
 
-        <li><a href="{% url 'cars_list' %}">Carros</a></li>
+        <li><a href="{% url 'home' %}">Serviços</a></li>
 
         {% if not user.is_authenticated %}
           <li><a href="{% url 'login' %}">Login</a></li>
-          <li><a href="{% url 'register' %}">Cadastre-se</a></li>
+          <li><a href="{% url 'cadastro_cliente' %}">Cadastre-se como Cliente</a></li>
+          <li><a href="{% url 'cadastro_profissional' %}">Cadastre-se como Profissional</a></li>
         {% endif %}
 
         {% if user.is_authenticated %}
