--- a/agendamento/templates/painel_cliente.html
+++ b/agendamento/templates/painel_cliente.html
@@ -8,4 +8,5 @@
 
   <h3>Seus Próximos Agendamentos</h3>
   {# Aqui você irá listar os agendamentos futuros do cliente #}
+  <p>Em breve, seus agendamentos aparecerão aqui.</p>
 {% endblock %}
