--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Cadastro{% endblock %}
+{% block title %}{{ titulo_pagina|default:"Cadastro" }}{% endblock %}
 
 {% block content %}
 
-    <h2>Crie sua conta</h2>
+    <h2>{{ titulo_pagina|default:"Crie sua conta" }}</h2>
     <form method="post">
         {% csrf_token %}
 
