--- a/agendamento/templates/servico_form.html
+++ b/agendamento/templates/servico_form.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}Login{% endblock %}
+{% block title %}{{ titulo_pagina }}{% endblock %}
 
 {% block content %}
 
-    <h2>Login</h2>
+    <h2>{{ titulo_pagina }}</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Entrar</button>
+        <button type="submit">Salvar Serviço</button>
     </form>
 
 {% endblock %}
