--- a/agendamento/templates/agendar.html
+++ b/agendamento/templates/agendar.html
@@ -6,7 +6,7 @@
   <h1>Agendar Serviço: {{ servico.nome }}</h1>
   <p><strong>Profissional:</strong> {{ servico.profissional.first_name }}</p>
   <p><strong>Preço:</strong> R$ {{ servico.valor }}</p>
-  <p><strong>Duração:</strong> {{ servico.duracao }}</p>
+  <p><strong>Duração:</strong> {{ servico.get_formatted_duration }}</p>
 
   <hr>
 
